# rust-webextension-protocol

./: Cargo.toml  README.md  test.sh
examples/: echo.rs
src/: lib.rs  main.rs  protocol.rs
tests/: simple-tests.rs
tests/fixtures/: simple.json
